# GeoPixel

./: .gitignore  AutoLoader.h  CMakeLists.txt  Errors.cpp  Errors.h  EventRegistration.cpp  EventRegistration.h  GLSLShaderProgram.cpp  GLSLShaderProgram.h  GeoPixel.sln  GeoPixel.vcxproj  GeoPixel.vcxproj.filters  IOManager.cpp  IOManager.h  ImageLoader.cpp  ImageLoader.h  KeyEvent.h  MainGame.cpp  MainGame.h  Projectile.cpp  Projectile.h  Sprite.cpp  Sprite.h  Vertex.h  main.cpp  xmake.lua
Shaders/: colorShader.fsh  colorShader.vsh
events/: PhysicsProcessingEvent.cpp  PhysicsProcessingEvent.h  WindowEvent.cpp  WindowEvent.h
resources/Shaders/: testShader.frag  testShader.vert
src/: AutoLoader.h  EventRegistration.h  MainGame.cpp  MainGame.h  Projectile.cpp  main.cpp
src/events/: PhysicsProcessingEvent.h  PlayerMoveEvent.cpp  PlayerMoveEvent.h  WindowEvent.cpp  WindowEvent.h
